--- a/src/main/resources/static/welcome.html
+++ b/src/main/resources/static/welcome.html
@@ -11,11 +11,11 @@
         $(function () {
             $('#myCarousel').carousel({interval: 2000});
             $.get("/image/selectStatus2", function (data) {
-                console.log(data)
                 var data1 = JSON.parse(data);
                 $.each(data1, function (index, obj) {
                     $("#img" + (index + 1)).attr("src", obj.iurl);
-
+                    $("#img" + (index + 1)).attr("title", obj.ititle);
+                    $("#img" + (index + 1) + (index + 1)).text(obj.idescribe);
                 })
             });
         })
@@ -32,7 +32,7 @@
 <div class="row">
     <div class="col-md-7">
         <div id="myCarousel" class="carousel slide">
-            <ol class="carousel-indicators">
+            <ol class="carousel-indicators" style="bottom: 40px;">
                 <li data-target='#myCarousel' data-slide-to="0" class="active"></li>
                 <li data-target='#myCarousel' data-slide-to="1"></li>
                 <li data-target='#myCarousel' data-slide-to="2"></li>
@@ -40,16 +40,32 @@
             </ol>
             <div class="carousel-inner">
                 <div class="item active">
-                    <img id="img1" alt="first slide" style="width: 800px;height:500px"/>
+                    <div class="layui-card">
+                        <img id="img1" alt="first slide" style="width: 790px;height:500px"/>
+                    </div>
+                    <div class="layui-card-body" id="img11" style="margin-top: -65px;font-size: 20px;background-color: #75787b;color: white">
+                    </div>
                 </div>
                 <div class="item">
-                    <img id="img2" alt="second slide" style="width: 800px;height:500px"/>
+                    <div class="layui-card">
+                        <img id="img2" alt="second slide" style="width: 790px;height:500px"/>
+                    </div>
+                    <div class="layui-card-body" id="img22" style="margin-top: -65px;font-size: 20px;background-color: #75787b;color: white">
+                    </div>
                 </div>
                 <div class="item">
-                    <img id="img3" alt="third slide" style="width: 800px;height:500px"/>
+                    <div class="layui-card">
+                        <img id="img3" alt="third slide" style="width: 790px;height:500px"/>
+                    </div>
+                    <div class="layui-card-body" id="img33" style="margin-top: -65px;font-size: 20px;background-color: #75787b;color: white">
+                    </div>
                 </div>
                 <div class="item">
-                    <img id="img4" alt="third slide" style="width: 800px;height:500px"/>
+                    <div class="layui-card">
+                        <img id="img4" alt="third slide" style="width: 790px;height:500px"/>
+                    </div>
+                    <div class="layui-card-body" id="img44" style="margin-top: -65px;font-size: 20px;background-color: #75787b;color: white">
+                    </div>
                 </div>
             </div>
         </div>
@@ -64,13 +80,119 @@
                 <li>优秀学生</li>
             </ul>
             <div class="layui-tab-content" style="height: 100px;">
-                <div class="layui-tab-item layui-show" id="view">
-
+                <div class="layui-tab-item layui-show" id="view"></div>
+                <div class="layui-tab-item" id="viewStudent"></div>
+                <!-- 校园美景-->
+                <div class="layui-tab-item">
+                    <div class="layui-row">
+                        <div class="layui-col-xs6">
+                            <div class="layui-card">
+                                <div class="layui-card-header">春明湖</div>
+                                <div class="layui-card-body">
+                                    <img src="/img/shangshi03.jpg" style="width: 250px;height: 160px">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-col-xs6">
+                            <div class="layui-card">
+                                <div class="layui-card-header">夏梦湖</div>
+                                <div class="layui-card-body">
+                                    <img src="/img/shangshi03.jpg" style="width: 250px;height: 160px">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-col-xs6">
+                            <div class="layui-card">
+                                <div class="layui-card-header">秋韵湖</div>
+                                <div class="layui-card-body">
+                                    <img src="/img/shangshi03.jpg" style="width: 250px;height: 160px">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-col-xs6">
+                            <div class="layui-card">
+                                <div class="layui-card-header">冬泰湖</div>
+                                <div class="layui-card-body">
+                                    <img src="/img/shangshi03.jpg" style="width: 250px;height: 160px">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="layui-tab-item">内容2</div>
-                <div class="layui-tab-item">内容3</div>
-                <div class="layui-tab-item">内容4</div>
-                <div class="layui-tab-item">内容5</div>
+                <!--优秀老师-->
+                <div class="layui-tab-item">
+                    <div class="layui-row">
+                        <div class="layui-col-xs6">
+                            <div class="layui-card">
+                                <div class="layui-card-header">张某某</div>
+                                <div class="layui-card-body">
+                                    <img src="/img/2.jpg" style="width: 250px;height: 160px">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-col-xs6">
+                            <div class="layui-card">
+                                <div class="layui-card-header">王某某</div>
+                                <div class="layui-card-body">
+                                    <img src="/img/2.jpg" style="width: 250px;height: 160px">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-col-xs6">
+                            <div class="layui-card">
+                                <div class="layui-card-header">李某某</div>
+                                <div class="layui-card-body">
+                                    <img src="/img/2.jpg" style="width: 250px;height: 160px">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-col-xs6">
+                            <div class="layui-card">
+                                <div class="layui-card-header">赵某某</div>
+                                <div class="layui-card-body">
+                                    <img src="/img/2.jpg" style="width: 250px;height: 160px">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--优秀学生-->
+                <div class="layui-tab-item">
+                    <div class="layui-row">
+                        <div class="layui-col-xs6">
+                            <div class="layui-card">
+                                <div class="layui-card-header">王子墨</div>
+                                <div class="layui-card-body">
+                                    <img src="/img/1.jpg" style="width: 250px;height: 160px">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-col-xs6">
+                            <div class="layui-card">
+                                <div class="layui-card-header">王子沫</div>
+                                <div class="layui-card-body">
+                                    <img src="/img/1.jpg" style="width: 250px;height: 160px">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-col-xs6">
+                            <div class="layui-card">
+                                <div class="layui-card-header">王子轩</div>
+                                <div class="layui-card-body">
+                                    <img src="/img/1.jpg" style="width: 250px;height: 160px">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-col-xs6">
+                            <div class="layui-card">
+                                <div class="layui-card-header">王子悦</div>
+                                <div class="layui-card-body">
+                                    <img src="/img/1.jpg" style="width: 250px;height: 160px">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -89,18 +211,21 @@
 <script id="demo1" type="text/html">
     <h1 id="newTitle" style="text-align: center"></h1>
     <br><br>
-    <div style="text-align: center"><span id="newAutor"  style="font-size: 20px"></span >&nbsp;&nbsp;&nbsp;&nbsp;<span id="newTime" style="font-size: 20px"></span></div>
+    <div style="text-align: center"><span id="newAutor" style="font-size: 20px"></span>&nbsp;&nbsp;&nbsp;&nbsp;<span
+            id="newTime" style="font-size: 20px"></span></div>
     <br><br>
     <div id="center" style="margin-left: 50px;margin-right: 50px"></div>
-    </div>
 </script>
 <script>
+    var view_page;
     layui.use(['layer', 'laytpl', 'form', 'jquery'], function () {
         var laytpl = layui.laytpl;
         var layer = layui.layer;
         var getTpl = demo.innerHTML;
         var view = document.getElementById('view');
+        var viewStudent = document.getElementById('viewStudent');
         view.innerHTML = "";
+        viewStudent.innerHTML = "";
         var index = layer.load(1); //添加laoding,0-2两种方
         $.ajax({
             url: "/news/selectNewsByAdmin",
@@ -110,6 +235,21 @@
                 layer.close(index);
                 laytpl(getTpl).render(result, function (html) {
                     view.innerHTML = html;
+                });
+                layui.form.render();
+            },
+            error: function (xhr) {
+                layer.msg("请求出错(请检查相关网络状况.)");
+            }
+        });
+        $.ajax({
+            url: "/news/selectNewsByStudent",
+            type: "POST",
+            dataType: 'json',
+            success: function (result) {
+                layer.close(index);
+                laytpl(getTpl).render(result, function (html) {
+                    viewStudent.innerHTML = html;
                 });
                 layui.form.render();
             },
@@ -137,11 +277,17 @@
 
         });
         layui.use('layer', function () {
-            var view_page = layer.open({
+            view_page = layer.open({
                 type: 1 //Page层类型
                 , shade: 0.6 //遮罩透明度
                 , anim: 1 //0-6的动画形式，-1不开启
                 , title: false
+                , closeBtn: false
+                , btn: '关闭全部'
+                , btnAlign: 'c' //按钮居中
+                , yes: function () {
+                    layer.closeAll();
+                }
                 , content: $('#demo1').html()
             });
             layer.full(view_page);
